Improve styling of pie chart + prevent overflow at low screen sizes

--- a/src/pages/Budget.css
+++ b/src/pages/Budget.css
@@ -2,7 +2,7 @@ body {
     height: 100vh;
 }
 main {
-    height: 100%;
+    height: 80vh;
 }
 
 .pieContainer {
@@ -10,19 +10,37 @@ main {
     grid-row: 1/3;
     padding: 20px;
     text-align: center;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: max-content 1fr max-content;
+    justify-items: center;
+
     
     .legend {
-        margin: 0 auto;
         width: fit-content;
+        height: fit-content;
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
         p {
             display: inline;
             width: fit-content;
-            margin: 10px
+            height: fit-content;
+            margin: 0 10px
         }
+        align-self: self-start;
     }
     .chartDimensions {
-        margin: 0 auto;
-    }    
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        align-self: center;
+    }
+    p {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+        width: fit-content;
+        height: fit-content;
+        align-self: self-end;
+    }
 
 }
 #budgetForm {
@@ -44,10 +62,12 @@ main {
 }
 .gridContainer {
     height: 100%;
+    width: 100vw;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     column-gap: 2em;
+    overflow: auto;
 }
 
 table {
